--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,7 +35,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
-  get: ^4.6.6
+  get: ^4.7.2
   http: ^1.1.0
   get_storage: ^2.1.1
   google_fonts: ^6.2.1
@@ -44,6 +44,11 @@ dependencies:
   zoom_tap_animation: ^1.1.0
   intl: ^0.20.1
   font_awesome_flutter: ^10.5.2
+  geolocator: ^12.0.0
+  flutter_timezone: ^1.0.0
+  flutter_map: ^7.0.2
+  latlong2: ^0.9.1
+  flutter_map_cancellable_tile_provider: ^3.0.2
 
 dev_dependencies:
   flutter_test:
