--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,9 @@ dependencies:
   flutter_map: ^7.0.2
   latlong2: ^0.9.1
   flutter_map_cancellable_tile_provider: ^3.0.2
+  image_picker: ^1.1.2
+  http_parser: ^4.0.2
+  html: ^0.15.5
 
 dev_dependencies:
   flutter_test:
