--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,24 +34,53 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
+  # UI and styling
   cupertino_icons: ^1.0.6
-  get: ^4.7.2
-  http: ^1.1.0
-  get_storage: ^2.1.1
   google_fonts: ^6.2.1
   hexcolor: ^3.0.1
   lottie: ^3.1.3
   zoom_tap_animation: ^1.1.0
-  intl: ^0.20.1
   font_awesome_flutter: ^10.5.2
-  geolocator: ^12.0.0
-  flutter_timezone: ^1.0.0
-  flutter_map: ^7.0.2
-  latlong2: ^0.9.1
-  flutter_map_cancellable_tile_provider: ^3.0.2
-  image_picker: ^1.1.2
+  
+  # State management and storage
+  get: ^4.7.2
+  get_storage: ^2.1.1
+  
+  # Network and API
+  http: ^1.1.0
   http_parser: ^4.0.2
   html: ^0.15.5
+  
+  # Date and time
+  intl: ^0.20.1
+  flutter_timezone: ^1.0.0
+  
+  # Geolocation
+  geolocator: ^12.0.0
+  latlong2: ^0.9.1
+  
+  # Maps
+  flutter_map: ^7.0.2
+  flutter_map_cancellable_tile_provider: ^3.0.2
+  
+  # Camera and media
+  image_picker: ^1.1.2
+  camera_web: ^0.3.5
+  camera: ^0.11.0+2
+  path_provider: ^2.1.5
+  path: ^1.9.0
+  
+  # Permissions
+  permission_handler: ^11.3.1
+  
+  # Web-specific packages
+  universal_html: ^2.2.4  # Untuk manipulasi DOM di web
+  image: ^4.1.3  # Untuk pemrosesan gambar di web
+  
+  # Cache management (untuk penyimpanan offline)
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
+  table_calendar: ^3.2.0
 
 dev_dependencies:
   flutter_test:
